# Log_Watcher

./: CMakeLists.txt  README.md
include/: circular_buffer.hpp
src/: log_watcher.cpp  log_watcher.hpp  main.cpp  web_socket_server.cpp  web_socket_server.hpp
web/: index.html
